Added findMarkersTree function and updated it to work with SCE objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(distinctColors)
 export(factorizeMatrix)
 export(featureModuleLookup)
 export(featureModuleTable)
+export(findMarkersTree)
 export(geneSetEnrich)
 export(logLikelihood)
 export(logLikelihoodHistory)
@@ -42,12 +43,14 @@ export(plotCeldaViolin)
 export(plotDecontXContamination)
 export(plotDecontXMarkerExpression)
 export(plotDecontXMarkerPercentage)
+export(plotDendro)
 export(plotDimReduceCluster)
 export(plotDimReduceFeature)
 export(plotDimReduceGrid)
 export(plotDimReduceModule)
 export(plotGridSearchPerplexity)
 export(plotHeatmap)
+export(plotMarkerHeatmap)
 export(plotRPC)
 export(recodeClusterY)
 export(recodeClusterZ)
@@ -120,11 +123,15 @@ exportMethods(splitModule)
 exportMethods(subsetCeldaList)
 import(Rcpp)
 import(RcppEigen)
+import(dbscan)
 import(foreach)
+import(ggplot2)
 import(grDevices)
 import(graphics)
 import(grid)
+import(pROC)
 import(uwot)
+import(withr)
 importClassesFrom(Matrix,dgCMatrix)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(MCMCprecision,fit_dirichlet)
@@ -134,10 +141,15 @@ importFrom(Matrix,t)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(Rtsne,Rtsne)
 importFrom(data.table,as.data.table)
+importFrom(dendextend,get_leaves_attr)
+importFrom(dendextend,get_nodes_attr)
+importFrom(dendextend,get_nodes_xy)
 importFrom(digest,digest)
 importFrom(doParallel,registerDoParallel)
 importFrom(enrichR,enrichr)
 importFrom(enrichR,listEnrichrDbs)
+importFrom(ggdendro,dendro_data)
+importFrom(ggdendro,ggdendrogram)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,colors)
@@ -150,8 +162,12 @@ importFrom(gtable,gtable_height)
 importFrom(gtable,gtable_width)
 importFrom(matrixStats,logSumExp)
 importFrom(methods,.hasSlot)
+importFrom(methods,hasArg)
 importFrom(methods,is)
 importFrom(methods,new)
+importFrom(pROC,auc)
+importFrom(pROC,coords)
+importFrom(pROC,roc)
 importFrom(plyr,mapvalues)
 importFrom(reshape2,melt)
 importFrom(scales,brewer_pal)
